@@ -1,0 +1,9 @@
+# BEGIN PLOT /CMS_2012_I1184941/d01-x01-y01
+Title=$\sqrt{s}=7$ TeV, $pp \to \text{jet}_{1}\text{jet}_{2}$, $|\eta^{j_1,j_2}|<4.4$, $p_{T}^{j_1,j_2} > 20$ GeV
+XLabel=$\xi$
+YLabel=$\mathrm{d}{\sigma_{jj}}/\mathrm{d}{\xi}$ [$\mu$b]
+FullRange=1
+LogX=1
+LogY=1
+LegendXPos=0.08
+# END PLOT
