@@ -127,6 +127,7 @@ dist_pkgdata_DATA = \
   CMS_2012_I1087342.plot \
   CMS_2012_I1102908.plot \
   CMS_2012_I1107658.plot \
+  CMS_2012_I1184941.plot \
   CMS_QCD_10_024.plot \
   D0_1996_S3214044.plot \
   D0_1996_S3324664.plot \
