@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="ISO-8859-1" ?>
+<!DOCTYPE aida SYSTEM "http://aida.freehep.org/schemas/3.3/aida.dtd">
+<aida version="3.3">
+  <implementation version="1.1" package="LWH"/>
+  <dataPointSet name="d01-x01-y01" title="" path="/REF/CMS_2012_I1184941" dimension="2">
+    <dimension dim="0" title="" />
+    <dimension dim="1" title="" />
+    <dataPoint>
+    <measurement value="1.150000e-03" errorPlus="8.500000e-04" errorMinus="8.500000e-04"/>
+    <measurement value="5.000000e+00" errorPlus="1.749285e+00" errorMinus="1.581138e+00"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="3.250000e-03" errorPlus="1.250000e-03" errorMinus="1.250000e-03"/>
+    <measurement value="8.200000e+00" errorPlus="2.376972e+00" errorMinus="2.563201e+00"/>
+  </dataPoint>
+  <dataPoint>
+    <measurement value="7.250000e-03" errorPlus="2.750000e-03" errorMinus="2.750000e-03"/>
+    <measurement value="1.350000e+01" errorPlus="4.589117e+00" errorMinus="3.228002e+00"/>
+  </dataPoint>
+  </dataPointSet>
+</aida>
