@@ -129,7 +129,8 @@ RivetCMSAnalyses_la_SOURCES = \
     CMS_2011_S9215166.cc \
     CMS_2012_I1087342.cc \
     CMS_2012_I1102908.cc \
-    CMS_2012_I1107658.cc
+    CMS_2012_I1107658.cc \
+    CMS_2012_I1184941.cc
 if ENABLE_PRELIMINARY
 RivetCMSAnalyses_la_SOURCES += \
     CMS_QCD_10_024.cc
